# shock-video-backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile-flower  config.py  database.db  database.sqlite  dependencies.py  docker-compose.yml  dockerfile  main.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
.github/: docker-deploy.yml
.github/workflows/: docker-deploy.yml
app/: main.py
app/api/: __init__.py
app/api/auth/: edit_pwd.py  profile.py  pwd_edit_confirm.py  refresh.py  register.py  register_confirm.py  tasks.py  token.py  update_profile.py
app/api/comments/: add_comment.py  delete_comment.py  get_comment.py  get_comment_replies.py  get_comments.py  like_comment.py  upd_comment.py
app/core/: celery_config.py  config.py  dependencies.py  router_loader.py
app/models/: auth_schemas.py  passlib_hasher.py  token_manager.py
config/: .env.example  docker-compose.yml  nginx.conf
fastapi_server/auth/: __init__.py  admin.py  me.py  refresh.py  register.py  token.py
fastapi_server/user_info/: __init__.py  admin.py  get_likes.py  get_user_by_id.py  load_pfp.py  me.py  profile.py  upload_pfp.py
fastapi_server/video/: __init__.py  delete_video.py  get_video.py  get_video_by_id.py  get_videos_by_user_id.py  like_video.py  update_video_info.py  upload_video.py  video_streaming.py  view_video.py
models/db_source/: db_adapter.py  sqlite_adapter.py
models/hashing/: passlib_hasher.py
models/schemas/: auth.py  auth_schemas.py
models/tables/: db_tables.py  sqlite_tables.py
models/tokens/: token_manager.py
(+21 files in other folders)
