[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "fastapi_server",
    "models",
    "config",
    "dependencies"
]
force_sort_within_sections = true
combine_as_imports = true
lines_after_imports = 2
lines_between_types = 1
include_trailing_comma = true
multi_line_output = 3

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[project]
name = "shock-video-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "asdfrewqha",email = "asdfrewqha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
